@@ -1,3 +1,11 @@
+2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Handle UIC, RCC and multiple Makefiles generated by qmake.
+	* autotroll.mk: Additionnal implicit rules to compile interfaces (.ui)
+          or Qt resources (.qrc).
+	* autotroll.m4: Detect qrc (in $(QRC)). Update doc. Handle multiple
+          Makefiles generated by qmake (Makefile.Debug, Makefile.Release...).
+
 2006-11-01  Akim Demaille  <akim@lrde.epita.fr>
 
 	Default is --without-openr
